--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -158,7 +158,12 @@
         // Data containing all family members
         // NOTE: The 'spouse_id' property has been replaced with 'spouse_ids' (an array) for all primary lineage members.
         const peopleData = [
-      
+                  { "id": "231", "name": "Moshe Barenbaum", "gender": "M", "spouse_ids": ["232"], "parent_ids": [], "children_ids": ["225", "227", "229"], "birth_year": "c. 1850", "death_year": null },
+                   { "id": "232", "name": "Rachel Barenbaum", "gender": "F", "spouse_ids": ["232"], "parent_ids": [], "children_ids": ["225", "227", "229"], "birth_year": "c. 1850", "death_year": null },
+                              { "id": "225", "name": "Szejwa Barenbaum", "gender": "M", "spouse_ids": [], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1870", "death_year": null },
+
+
+
         ];
 
         // Create a map for quick lookup
