Fix gender for Szejwa Barenbaum and add unknown entry

--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -160,7 +160,11 @@
         const peopleData = [
                   { "id": "231", "name": "Moshe Barenbaum", "gender": "M", "spouse_ids": ["232"], "parent_ids": [], "children_ids": ["225", "227", "229"], "birth_year": "c. 1850", "death_year": null },
                    { "id": "232", "name": "Rachel Barenbaum", "gender": "F", "spouse_ids": ["232"], "parent_ids": [], "children_ids": ["225", "227", "229"], "birth_year": "c. 1850", "death_year": null },
-                              { "id": "225", "name": "Szejwa Barenbaum", "gender": "M", "spouse_ids": [], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1870", "death_year": null },
+                              { "id": "225", "name": "Szejwa Barenbaum", "gender": "F", "spouse_ids": [], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1870", "death_year": null },
+                                          { "id": "227", "name": "Rivka Barenbaum", "gender": "F", "spouse_ids": [], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
+                                          { "id": "225", "name": "Unknown Barenbaum", "gender": "F", "spouse_ids": [], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
+
+
 
 
 
