--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -162,10 +162,10 @@
             { "id": "232", "name": "Rachel Barenbaum", "gender": "F", "spouse_ids": ["232"], "parent_ids": [], "children_ids": ["225", "227", "229"], "birth_year": "c. 1850", "death_year": null },
          { "id": "225", "name": "Szejwa Barenbaum", "gender": "F", "spouse_ids": ["226"], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1870", "death_year": null },
               { "id": "226", "name": "Aaron Galler", "gender": "M", "spouse_ids": ["225"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
-            { "id": "227", "name": "Rivka Barenbaum", "gender": "F", "spouse_ids": ["228"], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
-              { "id": "228", "name": "Shmuel Bromberg", "gender": "M", "spouse_ids": ["227"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
-             { "id": "229", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["232"], "parent_ids": ["228","227"], "children_ids": [], "birth_year": "1912", "death_year": null },
-            { "id": "230", "name": "Hymie Myers", "gender": "M", "spouse_ids": ["231"], "parent_ids": [], "children_ids": [], "birth_year": "1907", "death_year": null },
+            { "id": "227", "name": "Rivka Barenbaum", "gender": "F", "spouse_ids": ["228"], "parent_ids": ["231","232"], "children_ids": ["229","233","235","236","237"], "birth_year": "c. 1880", "death_year": null },
+              { "id": "228", "name": "Shmuel Bromberg", "gender": "M", "spouse_ids": ["227"], "parent_ids": [], "children_ids": ["229","233","235","236","237"], "birth_year": "c. 1880", "death_year": null },
+             { "id": "229", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["230"], "parent_ids": ["228","227"], "children_ids": [], "birth_year": "1912", "death_year": null },
+            { "id": "230", "name": "Hymie Myers", "gender": "M", "spouse_ids": ["229"], "parent_ids": [], "children_ids": [], "birth_year": "1907", "death_year": null },
              { "id": "233", "name": "Moshe Bromberg", "gender": "M", "spouse_ids": ["234"], "parent_ids": ["227","228"], "children_ids": [], "birth_year": "1913", "death_year": null },
              { "id": "234", "name": "Rachel Weinberger", "gender": "F", "spouse_ids": ["233"], "parent_ids": [], "children_ids": [], "birth_year": "1923", "death_year": null },
              { "id": "235", "name": "David Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["227","228"], "children_ids": [], "birth_year": "1918", "death_year": null },
