--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -173,8 +173,12 @@
              { "id": "237", "name": "Abba Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["227","228"], "children_ids": [], "birth_year": "1922", "death_year": null },
             
 
-            { "id": "229", "name": "Unknown Barenbaum", "gender": "F", "spouse_ids": ["230"], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
-                       { "id": "230", "name": "Moshe ?", "gender": "M", "spouse_ids": ["229"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
+            { "id": "238", "name": "Unknown Barenbaum", "gender": "F", "spouse_ids": ["239"], "parent_ids": ["231","232"], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
+                       { "id": "239", "name": "Moshe ?", "gender": "M", "spouse_ids": ["238"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
+                        { "id": "240", "name": "Esther ?", "gender": "F", "spouse_ids": ["241"], "parent_ids": ["238","239"], "children_ids": [], "birth_year": "c. 1900", "death_year": "1982"},
+                        { "id": "241", "name": "Yesha'ayahu Hazan", "gender": "M", "spouse_ids": ["240"], "parent_ids": [], "children_ids": [], "birth_year": "c.1900", "death_year": "1989"},
+
+
 
 
 
