--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -164,7 +164,7 @@
               { "id": "4", "name": "Aaron Galler", "gender": "M", "spouse_ids": ["3"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
             { "id": "5", "name": "Rivka Barenbaum", "gender": "F", "spouse_ids": ["6"], "parent_ids": ["1","2"], "children_ids": ["7","9","11","12","13"], "birth_year": "c. 1880", "death_year": null },
               { "id": "6", "name": "Shmuel Bromberg", "gender": "M", "spouse_ids": ["5"], "parent_ids": [], "children_ids": ["7","9","11","12","13"], "birth_year": "c. 1880", "death_year": null },
-             { "id": "7", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["8"], "parent_ids": "[5","6"], "children_ids": [], "birth_year": "1912", "death_year": null },
+             { "id": "7", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["8"], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1912", "death_year": null },
             { "id": "8", "name": "Hymie Myers", "gender": "M", "spouse_ids": ["7"], "parent_ids": [], "children_ids": [], "birth_year": "1907", "death_year": null },
              { "id": "9", "name": "Moshe Bromberg", "gender": "M", "spouse_ids": ["10"], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1913", "death_year": null },
              { "id": "10", "name": "Rachel Weinberger", "gender": "F", "spouse_ids": ["9"], "parent_ids": [], "children_ids": [], "birth_year": "1923", "death_year": null },
@@ -175,12 +175,6 @@
              { "id": "15", "name": "Moshe ?", "gender": "M", "spouse_ids": ["14"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
               { "id": "16", "name": "Esther ?", "gender": "F", "spouse_ids": ["17"], "parent_ids": ["14","15"], "children_ids": [], "birth_year": "c. 1900", "death_year": "1982"},
               { "id": "17", "name": "Yesha'ayahu Hazan", "gender": "M", "spouse_ids": ["16"], "parent_ids": [], "children_ids": [], "birth_year": "c.1900", "death_year": "1989"},
-
-
-
-
-
-
 
 
         ];
