--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -242,7 +242,7 @@
             <li class="flex items-center"><span class="ml-2">🎉</span><strong class="font-semibold">22 בנובמבר:</strong> יום הולדת 4 ליצחק מאיר נגלבלט!</li>
         `,
         'contactTitle': '✍️ רוצים לשתף?',
-        'contactText': 'יש לכם חדשות מרגשות, המלצות או תמונות מהטיול המשפחתי? פשוט שלחו לנו את העדכונים שלכם למייל: <strong>[כתובת המייל שלכם כאן]</strong>.',
+        'contactText': 'יש לכם חדשות מרגשות, המלצות או תמונות מהטיול המשפחתי? פשוט שלחו לנו את העדכונים שלכם למייל: <strong>familysite@gmx.com</strong>.',
         'footerText1': 'תודה שקראתם! נתראה במהדורה הבאה.',
         'footerText2': '&copy; 2025 עלון המשפחה. כל הזכויות שמורות.',
         'buttonText': 'Switch to English',
@@ -289,7 +289,7 @@
             <li class="flex items-center"><span class="ml-2">🎉</span><strong class="font-semibold">November 22:</strong> 4th birthday of Yitzchok Meir Nagelblatt!</li>
         `,
         'contactTitle': '✍️ Want to Share?',
-        'contactText': 'Have exciting news, recommendations, or photos from a family trip? Simply send us your updates to this email: <strong>[Your Email Here]</strong>.',
+        'contactText': 'Have exciting news, recommendations, or photos from a family trip? Simply send us your updates to this email: <strong>familysite@gmx.com</strong>.',
         'footerText1': 'Thanks for reading! See you in the next edition.',
         'footerText2': '&copy; 2025 The Family Newsletter. All rights reserved.',
         'buttonText': 'החלפה לעברית',
