--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>עלון המשפחה עם Firestore</title>
+  <title>עלון המשפחה</title>
   <!-- Load Tailwind CSS from CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Load Heebo font from Google Fonts -->
