--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -171,10 +171,18 @@
              { "id": "11", "name": "David Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1918", "death_year": null },
               { "id": "12", "name": "Rachel Bromberg", "gender": "F", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1920", "death_year": null },
              { "id": "13", "name": "Abba Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1922", "death_year": null },
-            { "id": "14", "name": "Unknown Barenbaum", "gender": "F", "spouse_ids": ["15"], "parent_ids": ["1","2"], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
-             { "id": "15", "name": "Moshe ?", "gender": "M", "spouse_ids": ["14"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
-              { "id": "16", "name": "Esther ?", "gender": "F", "spouse_ids": ["17"], "parent_ids": ["14","15"], "children_ids": [], "birth_year": "c. 1900", "death_year": "1982"},
-              { "id": "17", "name": "Yesha'ayahu Hazan", "gender": "M", "spouse_ids": ["16"], "parent_ids": [], "children_ids": [], "birth_year": "c.1900", "death_year": "1989"},
+            { "id": "14", "name": "Unknown Barenbaum", "gender": "F", "spouse_ids": ["15"], "parent_ids": ["1","2"], "children_ids": ["16"], "birth_year": "c. 1880", "death_year": null },
+             { "id": "15", "name": "Moshe ?", "gender": "M", "spouse_ids": ["14"], "parent_ids": [], "children_ids": ["16"], "birth_year": "c. 1880", "death_year": null },
+              { "id": "16", "name": "Esther ?", "gender": "F", "spouse_ids": ["17"], "parent_ids": ["14","15"], "children_ids": ["18","20","22"], "birth_year": "c. 1900", "death_year": "1982"},
+              { "id": "17", "name": "Yesha'ayahu Hazan", "gender": "M", "spouse_ids": ["16"], "parent_ids": [], "children_ids": ["18","20","22"], "birth_year": "c.1900", "death_year": "1989"},
+                { "id": "18", "name": "Ahuva Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "1925", "death_year": "2006"},
+            
+                     { "id": "20", "name": "Ayala Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": null, "death_year": "c.2020"},
+
+                                      { "id": "22", "name": "Zipporah Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "Alive", "death_year": null},
+
+
+
 
 
         ];
