--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
                     <option value="fr">Français</option>
                     <option value="yi">יידיש</option>
                     <option value="nl">Nederlands</option>
+                    <option value="rl">Request Language</option>
                 </select>
             </div>
             <!-- FIX: Replaced broken image link with a placeholder -->
@@ -156,7 +157,7 @@
                 intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד,אלוק, ברומברג, ברנבאום, פאס,שנק, ויינברגר, לייבנר, ואן דר ולדה, איזקס ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
                 intro2: "ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.",
                 sectionTree: "ברוכים הבאים לעץ המשפחה שלנו",
-                features: ["🌳 עץ משפחה אינטראקטיבי", "🔐 כניסת משתמשים והרשאות לפי צד משפחתי", "💬 קיר משפחתי לפוסטים ותגובות", "📨 מערכת הודעות פנימית", "🖼️ תצוגת גלריה למסמכים ותמונות", "🕯️ עמודי הנצחה עם נר דיגיטלי", "🌐 תפריט רב-לשוני", "🔍 חיפוש חכם", "📧 תמיכה בניוזלטר", "🤖 צ’אט AI משפחתי עם תמיכה בנתוני משפחה", "📱 תמיכה בעיצוב רספונסיבי לנייד"],
+                features: ["🌳 עץ משפחה אינטראקטיבי", "🔐 כניסת משתמשים והרשאות לפי צד משפחתי", "💬 קיר משפחתי לפוסטים ותגובות", "📨 מערכת הודעות פנימית", "🖼️ תצוגת גלריה למסמכים ותמונות", "🕯️ עמודי הנצחה עם נר דיגיטלי", "🌐 תפריט רב-לשוני", "🔍 חיפוש חכם", "📧 ניוזלטר חודשי", "🤖 צ’אט AI משפחתי עם תמיכה בנתוני משפחה", "📱 תמיכה בעיצוב רספונסיבי לנייד"],
                 newsTitle: "חדשות ועדכונים",
                 news: ["הוספנו יכולת העלאת תמונות לעץ המשפחה.", "נפתחה מערכת ההודעות הפנימית לכל המשתמשים.", "ניתן להדליק נר דיגיטלי לעילוי נשמת יקיריכם."],
                 footerText: "© 2025 אתר המשפחה • נבנה באהבה ע\"י המשפחה •",
@@ -175,7 +176,7 @@
                 intro1: "This website was built for all families: Ben Abou, Elharrar, Malka, Ben David, Elook, Bromberg, Barenbaum, Fass,Schneck, Weinberger, Leibner, van der Velde, Izaks and more – to share photos, memorials, family tree, announcements and more.",
                 intro2: "You can join by family side, update details, chat with the Family AI Chatbot and experience documented history together.",
                 sectionTree: "Welcome to our Family Tree",
-                features: ["🌳 Interactive Family Tree", "🔐 User login & permissions by family side", "💬 Family wall for posts & comments", "📨 Internal messaging system", "🖼️ Gallery view for documents & photos", "🕯️ Memorial pages with digital candles", "🌐 Multilingual Menu", "🔍 Smart search", "📧 Newsletter support", "🤖 Family AI Chat with family data", "📱 Responsive design for mobile"],
+                features: ["🌳 Interactive Family Tree", "🔐 User login & permissions by family side", "💬 Family wall for posts & comments", "📨 Internal messaging system", "🖼️ Gallery view for documents & photos", "🕯️ Memorial pages with digital candles", "🌐 Multilingual Menu", "🔍 Smart search", "📧 Monthly Newsletter ", "🤖 Family AI Chat with family data", "📱 Responsive design for mobile"],
                 newsTitle: "News & Updates",
                 news: ["Photo upload to the family tree is now available.", "Internal messaging system is open to all users.", "You can light a digital candle in memory of loved ones."],
                 footerText: "© 2025 Family Website • Built with love by the family •",
