--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -163,7 +163,7 @@
 
     <script>
         // --- Gemini API Configuration ---
-        const API_KEY = ""; // משתנה גלובלי
+        const API_KEY = "AIzaSyBGDa5M-uIX2fkJ4yYjFjVHhe2WTNc8uaQ"; // משתנה גלובלי
         const API_MODEL = "gemini-2.5-flash-preview-09-2025";
         const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${API_MODEL}:generateContent?key=${API_KEY}`;
         const MAX_RETRIES = 5;
