--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -164,8 +164,8 @@
               { "id": "4", "name": "Aaron Galler", "gender": "M", "spouse_ids": ["3"], "parent_ids": [], "children_ids": [], "birth_year": "c. 1880", "death_year": null },
             { "id": "5", "name": "Rivka Barenbaum", "gender": "F", "spouse_ids": ["6"], "parent_ids": ["1","2"], "children_ids": ["7","9","11","12","13"], "birth_year": "c. 1880", "death_year": null },
               { "id": "6", "name": "Shmuel Bromberg", "gender": "M", "spouse_ids": ["5"], "parent_ids": [], "children_ids": ["7","9","11","12","13"], "birth_year": "c. 1880", "death_year": null },
-             { "id": "7", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["8"], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1912", "death_year": null },
-            { "id": "8", "name": "Hymie Myers", "gender": "M", "spouse_ids": ["7"], "parent_ids": [], "children_ids": [], "birth_year": "1907", "death_year": null },
+             { "id": "7", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["8"], "parent_ids": ["5","6"], "children_ids": ["27","29"], "birth_year": "1912", "death_year": null },
+            { "id": "8", "name": "Hymie Myers", "gender": "M", "spouse_ids": ["7"], "parent_ids": [], "children_ids": ["27","29"], "birth_year": "1907", "death_year": null },
              { "id": "9", "name": "Moshe Bromberg", "gender": "M", "spouse_ids": ["10"], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1913", "death_year": null },
              { "id": "10", "name": "Rachel Weinberger", "gender": "F", "spouse_ids": ["9"], "parent_ids": [], "children_ids": [], "birth_year": "1923", "death_year": null },
              { "id": "11", "name": "David Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1918", "death_year": null },
@@ -175,13 +175,18 @@
              { "id": "15", "name": "Moshe ?", "gender": "M", "spouse_ids": ["14"], "parent_ids": [], "children_ids": ["16"], "birth_year": "c. 1880", "death_year": null },
               { "id": "16", "name": "Esther ?", "gender": "F", "spouse_ids": ["17"], "parent_ids": ["14","15"], "children_ids": ["18","20","22"], "birth_year": "c. 1900", "death_year": "1982"},
               { "id": "17", "name": "Yesha'ayahu Hazan", "gender": "M", "spouse_ids": ["16"], "parent_ids": [], "children_ids": ["18","20","22"], "birth_year": "c.1900", "death_year": "1989"},
-            //Third Generation//
-            { "id": "18", "name": "Ahuva Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "1925", "death_year": "2006"},
-            
+            //Third Generation- Esther Hazan//
+            { "id": "18", "name": "Ahuva Hazan", "gender": "F", "spouse_ids": ["19"], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "1925", "death_year": "2006"},
+                        { "id": "19", "name": "Moshe Zalezman", "gender": "M", "spouse_ids": ["18"], "parent_ids": [], "children_ids": [], "birth_year": "1922", "death_year": "2011"},
                      { "id": "20", "name": "Ayala Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": null, "death_year": "c.2020"},
 
-                                      { "id": "22", "name": "Zipporah Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "Alive", "death_year": null},
+                      { "id": "22", "name": "Zipporah Hazan", "gender": "F", "spouse_ids": ["23], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "Alive", "death_year": null},
+                        { "id": "23", "name": "Moshe Zohar", "gender": "M", "spouse_ids": ["22"], "parent_ids": ["16","17"], "children_ids": [], "birth_year": null, "death_year": null},
+            //Third Generation- Molly Myers//
+                         { "id": "27", "name": "Martin Myers", "gender": "M", "spouse_ids": ["28"], "parent_ids": ["7","8"], "children_ids": [], "birth_year": null, "death_year": null },
+                                  { "id": "28", "name": "Martin Myers", "gender": "M", "spouse_ids": ["27"], "parent_ids": ["7","8"], "children_ids": [], "birth_year": null, "death_year": null },
 
+                         { "id": "29", "name": "Karen Myers", "gender": "F", "spouse_ids": [], "parent_ids": ["7","8"], "children_ids": [], "birth_year": null, "death_year": null },
 
 
 
