--- a/public/trees/Leibner.html
+++ b/public/trees/Leibner.html
@@ -380,18 +380,17 @@
                                         { id: 479, name: "Nathan Leibner", gender: "M" }
                                         
                                         // Other children:
-                                        // { id: 482, name: "Reisel Leibner", gender: "F" }, // Conflict removed
-                                        // { id: 483, name: "Sara Leibner", gender: "F" }, // Conflict removed
-                                        // { id: 484, name: "Gitel Leibner", gender: "F" }, // Conflict removed
-                                        // { id: 487, name: "Pearl Leibner", gender: "F" }, // Conflict removed
-                                        // { id: 496, name: "Ester Leibner", gender: "F" } // Conflict removed
+                                       { id: 482, name: "Reisel Leibner", gender: "F" }, // Conflict removed
+                                     { id: 483, name: "Sara Leibner", gender: "F" }, // Conflict removed
+                                         { id: 484, name: "Gitel Leibner", gender: "F" }, // Conflict removed
+                                        { id: 487, name: "Pearl Leibner", gender: "F" }, // Conflict removed
+                                     { id: 496, name: "Ester Leibner", gender: "F" } // Conflict removed
                                     ]}
                                 ]
                             }, // End of Nathan Nute Halevi Leibner (490)
                             // 2. Daughter: Rachel Yetta Leibner (494) (1853-?) - Now correctly a sibling of Nathan
-                            { 
-                                id: 494, name: "Rachel Yetta Leibner", gender: "F", birth_year: 1853, note: "(Sister, b. 1853)",
-                                spouse: [{ // FIXED: removed \
+                            {id: 494, name: "Rachel Yetta Leibner", gender: "F", birth_year: 1853, note: "(Sister, b. 1853)",
+                                spouse: 
                                     id: 495, name: "Yehiel Aharon Weinberger", gender: "M", 
                                     // Children branch moved here (previously nested incorrectly under Nathan's 3rd wife)
                                     children: [ // FIXED: removed \
