--- a/public/trees/Leibner.html
+++ b/public/trees/Leibner.html
@@ -168,7 +168,7 @@
                 id: 502, name: "Rachela Leibner", gender: "F",
                 children: [ // FIXED: removed \
                     // Shraga Feiwel Leibner (498) branch (1821-1913)
-                    { id: 498, name: "Shraga Feiwel Leibner", gender: "M", birth_year: 1821, death_year: 1913, spouse: [{ // FIXED: removed \
+                    { id: 498, name: "Shraga Feiwel Leibner", gender: "M", birth_year: 1821, death_year: 1913,"children_ids":["490","494","496"], spouse: [{ // FIXED: removed \
                         // Sheindel Gross (499) (d. 1853)
                         id: 499, name: "Sheindel Gross", gender: "F", death_year: 1853, 
                         
