--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -180,8 +180,8 @@
                         { "id": "19", "name": "Moshe Zalezman", "gender": "M", "spouse_ids": ["18"], "parent_ids": [], "children_ids": [], "birth_year": "1922", "death_year": "2011"},
                      { "id": "20", "name": "Ayala Hazan", "gender": "F", "spouse_ids": [], "parent_ids": ["16","17"], "children_ids": [], "birth_year": null, "death_year": "c.2020"},
 
-                      { "id": "22", "name": "Zipporah Hazan", "gender": "F", "spouse_ids": ["23], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "Alive", "death_year": null},
-                        { "id": "23", "name": "Moshe Zohar", "gender": "M", "spouse_ids": ["22"], "parent_ids": ["16","17"], "children_ids": [], "birth_year": null, "death_year": null},
+                      { "id": "22", "name": "Zipporah Hazan", "gender": "F", "spouse_ids": ["23"], "parent_ids": ["16","17"], "children_ids": [], "birth_year": "Alive", "death_year": null},
+                        { "id": "23", "name": "Moshe Zohar", "gender": "M", "spouse_ids": ["22"], "parent_ids": [], "children_ids": [], "birth_year": null, "death_year": null},
             //Third Generation- Molly Myers//
                          { "id": "27", "name": "Martin Myers", "gender": "M", "spouse_ids": ["28"], "parent_ids": ["7","8"], "children_ids": ["31","33"], "birth_year": null, "death_year": null },
                             { "id": "28", "name": "Nancy Myers", "gender": "F", "spouse_ids": ["27"], "parent_ids": [], "children_ids": ["31","33"], "birth_year": null, "death_year": null },
