--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -189,12 +189,15 @@
                          { "id": "30", "name": "Karen Myers", "gender": "F", "spouse_ids": ["31"], "parent_ids": ["7","8"], "children_ids": [], "birth_year": null, "death_year": null },
                          { "id": "31", "name": "Bob Yukich", "gender": "M", "spouse_ids": ["30"], "parent_ids": [], "children_ids": [], "birth_year": null, "death_year": null },
             //-Forth Generation- Molly Myers-//
-                         { "id": "31", "name": "Carla Myers", "gender": "F", "spouse_ids": [], "parent_ids": ["27","28"], "children_ids": ["32"], "birth_year": null, "death_year": null },
-                             { "id": "32", "name": "Peter Myers", "gender": "M", "spouse_ids": [], "parent_ids": ["31"], "children_ids": [], "birth_year": null, "death_year": null },
-                           { "id": "33", "name": "Rebecca Myers", "gender": "F", "spouse_ids": ["34"], "parent_ids": ["27","28"], "children_ids": [], "birth_year": null, "death_year": null },
-                         { "id": "34", "name": "Seth Frader-Thompson", "gender": "M", "spouse_ids": [], "parent_ids": [], "children_ids": [], "birth_year": null, "death_year": null },
-                          { "id": "35", "name": "Sam Frader Thompson", "gender": "M", "spouse_ids": [], "parent_ids": ["33","34"], "children_ids": [], "birth_year": null, "death_year": null },
-                                 { "id": "36", "name": "Labby", "gender": "M", "spouse_ids": [], "parent_ids": ["27","28"], "children_ids": [], "birth_year": null, "death_year": null },
+                         { "id": "32", "name": "Carla Myers", "gender": "F", "spouse_ids": [], "parent_ids": ["27","28"], "children_ids": ["33"], "birth_year": null, "death_year": null },
+                             { "id": "33", "name": "Peter Myers", "gender": "M", "spouse_ids": [], "parent_ids": ["32"], "children_ids": [], "birth_year": null, "death_year": null },
+                           { "id": "34", "name": "Rebecca Myers", "gender": "F", "spouse_ids": ["35","37"], "parent_ids": ["27","28"], "children_ids": ["36","38"], "birth_year": null, "death_year": null },
+                         { "id": "35", "name": "Seth Frader-Thompson", "gender": "M", "spouse_ids": ["34"], "parent_ids": [], "children_ids": ["36"], "birth_year": null, "death_year": null },
+                          { "id": "36", "name": "Sam Frader Thompson", "gender": "M", "spouse_ids": [], "parent_ids": ["34","35"], "children_ids": [], "birth_year": null, "death_year": null },
+                                 { "id": "37", "name": "Scott Labby", "gender": "M", "spouse_ids": [], "parent_ids": ["34","37"], "children_ids": ["38"], "birth_year": null, "death_year": null },
+                                      { "id": "38", "name": "Maren Labby", "gender": "F", "spouse_ids": [], "parent_ids": ["34","37"], "children_ids": [], "birth_year": null, "death_year": null },
+
+            
 
 
         ];
